# pympfit

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  psi.86124.clean  psi.87488.clean  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
devtools/: README.md
devtools/conda-envs/: test_env_rdkit.yaml  test_env_rdkit_and_openeye.yaml
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
docs/_static/: custom.css
docs/autosummary/: openff_pympfit.gdma.rst  openff_pympfit.mpfit.rst  openff_pympfit.optimize.rst
docs/user_guide/: theory.md
examples/: conformer_dependence_test.py  debug_multiconf.py  debug_multiconf_v2.py  debug_multiconf_v3.py  gdma-charges-multi.py  gdma-charges.py  mpfit_vs_resp_comparison.py  resp-charges-multi.py  tfsi_conformer_study.py
examples/tutorials/: quickstart.py
openff_pympfit/: __init__.py  _annotations.py
openff_pympfit/gdma/: _gdma.py  psi4.py
openff_pympfit/gdma/storage/: __init__.py  _storage.py  db.py  exceptions.py
openff_pympfit/mpfit/: _legacy.py  _mpfit.py  core.py  solvers.py
openff_pympfit/optimize/: __init__.py  _optimize.py
openff_pympfit/tests/: conftest.py  test_core.py  test_gdma.py  test_mpfit.py  test_openff_pympfit.py  test_optimize.py  test_solvers.py  test_storage.py
openff_pympfit/tests/data/esp/: acetaldehyde_conformer.npy  acetaldehyde_esp.npy  acetaldehyde_grid.npy  benzene_conformer.npy  benzene_esp.npy  benzene_grid.npy  co2_conformer.npy  co2_esp.npy  co2_grid.npy  formaldehyde_conformer.npy  formaldehyde_esp.npy  formaldehyde_grid.npy  formic_acid_conformer.npy  formic_acid_esp.npy  formic_acid_grid.npy  methyl_fluoride_conformer.npy  methyl_fluoride_esp.npy  methyl_fluoride_grid.npy  methylamine_conformer.npy  methylamine_esp.npy  methylamine_grid.npy  water_conformer.npy  water_esp.npy  water_grid.npy
