[build-system]
requires = ["setuptools>=61.0", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

# Self-descriptive entries which should always be present
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "openff_pympfit"
description = "Partial atomic charge assignment via multipole moment-based fitting algorithm"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Shehan M. Parmar", email = "sparmar32@gatech.edu" }
]
license = "MIT"
license-files = ["LICENSE"]
# See https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "openff-recharge>=0.5.0",
    "openff-utilities",
    "scipy>=1.7",
]

[project.urls]
"Source" = "https://github.com/shehan807/openff-pympfit"
"Documentation" = "https://openff-pympfit.readthedocs.io/"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]

[tool.setuptools]
# This subkey is a beta stage development and keys may change in the future, see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html for more details
#
# As of version 0.971, mypy does not support type checking of installed zipped
# packages (because it does not actually import the Python packages).
# We declare the package not-zip-safe so that our type hints are also available
# when checking client code that uses our (installed) package.
# Ref:
# https://mypy.readthedocs.io/en/stable/installed_packages.html?highlight=zip#using-installed-packages-with-mypy-pep-561
zip-safe = false
# Let setuptools discover the package in the current directory,
# but be explicit about non-Python files.
# See also:
#   https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
# Note that behavior is currently evolving with respect to how to interpret the
# "data" and "tests" subdirectories. As of setuptools 63, both are automatically
# included if namespaces is true (default), even if the package is named explicitly
# (instead of using 'find'). With 'find', the 'tests' subpackage is discovered
# recursively because of its __init__.py file, but the data subdirectory is excluded
# with include-package-data = false and namespaces = false.
include-package-data = false
[tool.setuptools.packages.find]
namespaces = false
where = ["."]

# Ref https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
[tool.setuptools.package-data]
openff_pympfit = [
    "py.typed",
    "data/**/*",
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "openff_pympfit/_version.py"

[tool.ruff]
line-length = 88
exclude = ["openff_pympfit/tests/", "openff_pympfit/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "I"]
ignore = ["E203", "E266", "E501", "W503", "B905", "B902", "E704"]

[tool.ruff.lint.isort]
known-third-party = [
    "click",
    "jinja2",
    "numpy",
    "openeye",
    "pydantic",
    "scipy",
    "sqlalchemy",
    "typing_extensions",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "openff_pympfit/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
disable_error_code = ["call-arg"]
exclude = ["openff_pympfit/tests/"]

[tool.pytest.ini_options]
testpaths = ["openff_pympfit/tests"]
addopts = "-v --tb=short"
